@@ -1,3 +1,8 @@
+Fri Mar  2 12:41:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Compression/rle/RLECompressor.h:
+          Fixed export macro
+
 Wed Feb 29 16:30:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>
 
         * ace/CDR_Stream.cpp:
